Fixed volume icons' alignment.
New icons are smaller and do not look good with vertical centering. This patch aligns them to the label's baseline and also adds small margin between icons and labels.

TEST=Enter Files.app and check icons in the left nav.
BUG=None

Review URL: https://codereview.chromium.org/12208122

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@181844 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: ddcff0887bd615c3741131029e41beb56bf3b748

--- a/chrome/browser/resources/file_manager/css/file_manager.css
+++ b/chrome/browser/resources/file_manager/css/file_manager.css
@@ -249,14 +249,14 @@ div.sidebar-splitter {
 
 li.root-item > .root-label {
   -webkit-box-flex: 1;
-  margin-right: 5px;
+  margin: 0 2px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
 .volume-icon {
-  background-position: center center;
+  background-position: center 2px;
   background-repeat: no-repeat;
   height: 24px;
   width: 24px;
